# video_project

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env_example  pyproject.toml  requirements.txt
accounts/: admin.py  managers.py  models.py  serializers.py  urls.py
accounts/migrations/: 0001_initial.py
nginx/: nginx.conf
video_project/: asgi.py  settings.py  urls.py  wsgi.py
videos/: admin.py  models.py  pagination.py  permissions.py  serializers.py  services.py  urls.py  views.py
videos/management/commands/: seed_data.py
videos/migrations/: 0001_initial.py
